--- a/pyscript/lang/zh.json
+++ b/pyscript/lang/zh.json
@@ -1,4 +1,5 @@
 {
+  "description":"颜色转换器能把普通图片转换成用选定颜色所近似的图片，用来帮助ComputerCraft系列模组的使用，也可以用在其他用途。",
   "GUI":{
     "window":{
       
@@ -7,10 +8,22 @@
       "title":"颜色转换器"
     },
     "home":{
-      "title":"主页"
+      "title":"主页",
+      "descTitle":"软件介绍",
+      "btnFrame":"操作",
+      "btns":{
+        "run":"开始转换",
+        "exit":"退出软件"
+      }
     },
     "info":{
-      "title":"信息"
+      "title":"信息",
+      "shower":{
+        "author":"作者信息",
+        "version":"版本信息",
+        "vver":"版本：",
+        "vdat":"更新时间："
+      }
     },
     "uplog":{
       "title":"更新日志"
