--- a/pyscript/lang/zh.json
+++ b/pyscript/lang/zh.json
@@ -38,7 +38,8 @@
         "author":"作者信息",
         "version":"版本信息",
         "vver":"版本：",
-        "vdat":"更新时间："
+        "vdat":"更新时间：",
+        "todo":"未来新功能"
       }
     },
     "uplog":{
